# trading-latency-benchmark

./: .gitignore  .gitmodules  README.md  dependency-reduced-pom.xml  pom.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml
.github/extract-snippets/: snippet-extensions.yml
.github/workflows/: build-pull-request.yml  close-stale-issues.yml  extract-snippets-dryrun.yml  extract-snippets.yml  release.yml
af_xdp_zero_copy_perf_benchmark/: AFXDPSocket.cpp  AFXDPSocket.hpp  ControlClient.cpp  Makefile  MarketDataProviderClient.cpp  NetworkInterfaceConfigurator.hpp  PacketMultiplexer.cpp  PacketMultiplexer.hpp  PacketMultiplexerMain.cpp  PacketReplicator.cpp  PacketReplicator.hpp  PacketReplicatorMain.cpp  README.md  TestClient.cpp  cleanup.sh  multicast_filter.c  run_performance_benchmark.sh  unicast_filter.c
assets/blog/: tick_to_trade_latency_part2_os_tuning.md  tick_to_trade_latency_part_2_os_tuning_reference.md
cpp-client/: .gitignore  CMakeLists.txt  Config.cpp  Config.h  ExchangeClient.cpp  ExchangeClient.h  ExchangeClientLatencyTestHandler.cpp  ExchangeClientLatencyTestHandler.h  ExchangeProtocol.cpp  ExchangeProtocol.h  Logger.h  README.md  cmake_install.cmake  config.properties  hft_client.rc  main.cpp
deployment/: AMI_BUILDER_README.md  build-tuned-ami.sh  cleanup_exchange_clients.sh  deploy-feeder.sh  deploy-latency-hunting.sh  deploy.sh  deploy_configuration.sh  install_openssl_1_1_1.sh  install_openssl_1_1_1_with_qat_engine.sh  latency_hunting.md  latency_report.sh  output.csv  restart_exchange_clients.sh  run_client.sh  run_ping_test.sh  run_server.sh  run_with_qatengine.sh  run_without_qatengine.sh  setup-vpc-peering.sh  show_latency_reports.sh  stop.sh  stop_exchange_clients.sh  tune.sh
deployment/ansible/: 24_hours_of_lemans.sh  ansible.cfg  check_client_running.yaml  cleanup_all_clients.yaml  deploy_amd_test_stack.yaml  deploy_application.yaml  deploy_configuration.yaml  deploy_hft_client_application.yaml  deploy_hft_client_configuration.yaml  deploy_intel_qat_enabled_test_stack.yaml  deploy_mock_trading_server.yaml  deploy_trading_mock_server.yaml  fetch_histogram_logs.yaml  fetch_hunting_histogram_logs.yaml  init_24h_lemans.sh  install_java_playbook.yaml  instance_config.yaml  provision_cpp_client.yaml  provision_ec2.yaml  provision_ec2_for_ping_test.yaml  provision_exchange.yaml  provision_feeder_nodes.yaml  provision_java_client.yaml  provision_rust_client.yaml  restart_exchange_server.yaml  restart_hft_client.yaml  restart_latency_test_on_all_clients.yaml  restart_mock_trading_server.yaml  run_hunting_benchmark.yaml  start_all.sh  start_latency_test.yaml  start_latency_test_on_all_clients.yaml  stop_latency_test.yaml  stop_latency_test_on_all_clients.yaml  tune_feeder.yaml  tune_os.yaml  tune_os_2.yaml  validate_tuning_os.yaml
deployment/ansible/inventory/: amd_virginia_inventory.aws_ec2.yml  ami-builder-inventory.aws_ec2.yml  client_inventory.aws_ec2.yml  exchange_client_inventory.aws_ec2.yml  exchange_server_inventory.aws_ec2.yml  feeder.aws_ec2.yml  hunting_inventory.aws_ec2.yml  intel_virginia_inventory.aws_ec2.yml  inventory.aws_ec2.yml  server_inventory.aws_ec2.yml  tokyo_inventory.aws_ec2.yml  virginia_inventory.aws_ec2.yml
deployment/cdk/: README.md  ami-builder-outputs.json  cdk.json  package.json  template.yaml
deployment/cdk/lib/: ami-builder-stack.ts  base-latency-hunting-stack.ts  cluster-placement-group-stack.ts  feeder-stack.ts  latency-hunting-byovpc-stack.ts  latency-hunting-stack.ts  low-latency-connect-stack.ts  multi-az-stack.ts  single-instance-stack.ts  single-metal-instance-stack.ts
deployment/cdk/test/: low-latency-connect.test.ts
deployment/mcast_gre/: README.md  configure.yaml  deploy.sh  inventory.aws_ec2.yml  tune_feeder.yaml
deployment/mcast_gre/benchmark/: Makefile  README.md  ptp.sh  receiver.cpp  sender.cpp  subscriber_filter.c
deployment/mcast_gre/cdk/: cdk.json  package.json  tsconfig.json
ec2_timestamping_programs/: Makefile
ec2_timestamping_programs/include/: timestamp_common.h  timestamp_logging.h
ec2_timestamping_programs/src/: timestamp_client.c  timestamp_common.c  timestamp_csvjoin.c  timestamp_logging.c  timestamp_server.c
hft_client/cpp-client/: CMakeLists.txt  Config.cpp  Config.h  ExchangeClientLatencyTestHandler.cpp  ExchangeClientLatencyTestHandler.h  ExchangeProtocol.cpp  ExchangeProtocol.h  README.md  config.properties
hft_client/java_client/: pom.xml
hft_client/rust_client/: Cargo.toml  README.md
hft_client/rust_client/src/: client.rs  config.rs  lib.rs  main.rs  protocol.rs  tracker.rs
hft_client/rust_client/tests/: config_tests.rs  integration_tests.rs  protocol_tests.rs  tracker_tests.rs
mcast2ucast/: README.md  bootstrap.sh  build_igb_uio.sh  create_eni.sh  end_to_end_ptp.sh  mcast2ucast.conf.example  meson.build  setup_ena_bypass.sh  tune_os.sh
mcast2ucast/benchmarks/: latency_receiver.cpp  latency_test.cpp  start_servers.sh  test_sender.py
mcast2ucast/demo/: README.md  dashboard.html  server.py  tunnels.sh
mcast2ucast/src/: config.c  config.h  dataplane.c  dataplane.h  main.c  producer_notify.c  rewrite.c  web.h
mock-trading-server/: Cargo.toml  README.md  configuration.toml
mock-trading-server/src/: main.rs  websocket.rs  websocket_message_types.rs
networking_benchmarks/: README.md
networking_benchmarks/af_xdp_zero_copy_perf_benchmark/: AFXDPSocket.cpp  AFXDPSocket.hpp  ControlClient.cpp  Makefile  NetworkInterfaceConfigurator.cpp  PacketReplicator.cpp  PacketReplicator.hpp  PacketReplicatorMain.cpp  README.md  TestClient.cpp  gre_filter.c  unicast_filter.c
networking_benchmarks/ec2_timestamping_programs/: README.md
networking_benchmarks/mcast2ucast/: .gitignore  Makefile  deploy.conf  setup_ena_bypass.sh  tune_os.sh
networking_benchmarks/mcast2ucast/benchmarks/: Makefile  latency_receiver.py  (+3 more)
networking_benchmarks/open_onload/: Makefile  README.md
release-configs/: README.md  java-client-config.properties  rust-server-configuration.toml
test/e2e/: README.md  e2e_integration_test.sh
(+65 files in other folders)
