[package]
name = "mock-trading-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4"
actix-web-actors = "4.2.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"