[package]
name = "mock-trading-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = { version = "4.5.1", features=["openssl"]}
actix-web-actors = "4.2.0"
openssl={ version = "0.10.64" }
openssl-sys={ version = "0.9" }
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
config = "0.13"
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
[patch.crates-io]
openssl = { git="https://github.com/SercanKaraoglu/rust-openssl/", package="openssl", branch="add-engine-bindings" }
openssl-sys = { git="https://github.com/SercanKaraoglu/rust-openssl/", package="openssl-sys", branch="add-engine-bindings" }
